Your commit message

--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <meta charset="utf-8" /> <!-- Specifies the character encoding for the HTML document -->
+  <title>Ionic App</title> <!-- The title of the document, displayed in the browser's title bar or tab -->
 
-  <base href="/" />
+  <base href="/" /> <!-- Specifies the base URL for all relative URLs in the document -->
 
-  <meta name="color-scheme" content="light dark" />
+  <meta name="color-scheme" content="light dark" /> <!-- Allows the browser to use the user's preferred color scheme (light or dark mode) -->
   <meta name="viewport" content="viewport-fit=cover, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+  <!-- Sets the viewport to ensure the app is properly scaled on mobile devices, disabling user scaling for a fixed layout -->
+  
+  <meta name="format-detection" content="telephone=no" /> <!-- Prevents the browser from automatically detecting and formatting phone numbers as clickable links -->
+  <meta name="msapplication-tap-highlight" content="no" /> <!-- Disables the highlight that appears when users tap on an element in Internet Explorer/Edge -->
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png" /> <!-- Links to the favicon for the app, displayed in the browser tab -->
 
   <!-- Add to homescreen for iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes" /> <!-- Enables the app to be added to the home screen on iOS devices -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" /> <!-- Sets the status bar style for the app when added to the home screen on iOS -->
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"> 
+  <!-- Imports the 'Poppins' font from Google Fonts with specified font weights (300, 400, 600) for use in the app -->
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root></app-root> <!-- The root component of the Angular/Ionic app. This is where the Angular app will be bootstrapped and rendered. -->
 </body>
-
 </html>
